Fri Mar 27 08:51:17 PST 1998 Shawn T. Amundson <amundson@gtk.org>

	* docs/Makefile.sgml: some stuff for doing plain text and
	  postscript

Fri Mar 27 00:13:18 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c (gtk_propagate_event): If the widget is _not_
	a descendant of a Window widget, propagate key presses like
	other events.

	* gtk/gtkentry.c gtk/gtktext.c: Ignore multiple simultaneous
	button presses instead of treating subsequent presses as
	release/press pairs for tablet compatibility.

	* configure.in config.h.in: Removed inline checks, because they
	are duplicated in glib.

	* gtk/gtkwidget.c (gtk_widget_draw): When gtk_widget_draw ()
	occurs with queued draw already in place, redraw _entire_
	widget. (Pointed out by Tim Janik)

Thu Mar 26 23:12:54 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_propagate_event): make a clear distinction between
	key press/release events, which will be sent to a widgets toplevel
	ancestor and be forwarded from there, and all other events that need to
 	get propagated up the widget tree (pointed out by Owen Taylor).

Thu Mar 26 21:37:57 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkradiobutton.c (gtk_radio_button_draw_indicator): always
	display the correct active state.

	* gtk/gtkcheckbutton.c (gtk_real_check_button_draw_indicator): always
	display the correct active state.

	* gtk/gtkwidget.c (gtk_widget_set_arg): CAN_FOCUS and CAN_DEFAULT flag
 	changes need to queue a resize.

	* gtk/gtkbutton.c (gtk_button_paint): take border_width into
 	consideration for restrict area.

	* gtk/gtktogglebutton.c (gtk_toggle_button_class_init): enable the
 	draw_default member of GtkButton, otherwise the diplay is messed up
	for CAN_DEFAULT toggles.
	(gtk_toggle_button_draw_focus): always display whether the toggle button
	is active or not.

	* gtk/gtkwidget.c (gtk_widget_set_state): 
	(gtk_widget_set_sensitive): 
	(gtk_widget_set_parent): 
	(gtk_widget_propagate_state): take into consideration, whether we really