@@ -12,8 +12,8 @@ pixmap_path "."
 
 style "default"
 {
-  fontset = "-adobe-helvetica-medium-r-normal--*-120-*-*-*-*-*-*,*"
-#  font = "-adobe-helvetica-medium-r-normal--*-120-*-*-*-*-iso8859-1"
+#  fontset = "-adobe-helvetica-medium-r-normal--*-120-*-*-*-*-*-*,*"
+  font = "-adobe-helvetica-medium-r-normal--*-120-*-*-*-*-*-*"
 }
 
 style "window"
